# flutter-control-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  ISSUES.md  PHASE6-PLAN.md  PROJECT_STATUS.md  README.md  REFACTOR_PLAN.md  flutter-control-stdio.py  pyproject.toml  requirements.txt  update.sh
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md
docs/archive/: PROJECT_STATUS.md  TODO.md
flutter_control/: __init__.py  __version__.py  adb_proxy.py  cli.py  config.py
flutter_control/driver/: __init__.py  client.py  commands.py  finders.py  protocol.py
flutter_control/logging/: __init__.py  trace.py
flutter_control/maestro/: __init__.py  flow_builder.py  mcp_client.py  parser.py  wrapper.py
flutter_control/mcp/: __init__.py  server.py  tools.py
flutter_control/unified/: __init__.py  backend_selector.py  executor.py
scripts/: cleanup-host.sh  cleanup-legacy.sh  diagnose-host.sh  install-ios-host.sh  install.sh  observatory-bridge.py  release.sh  start-vm-server.sh  update-host.sh  update.sh
test_app/: README.md  pubspec.yaml
test_app/android/app/: build.gradle.kts
test_app/ios/Runner.xcodeproj/: project.pbxproj
test_app/lib/: main.dart
test_app/linux/: CMakeLists.txt
test_app/test/: widget_test.dart
test_app/web/: index.html  manifest.json
test_app/windows/: CMakeLists.txt
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  test_android_lifecycle.py  test_assertions.py  test_driver_only.py  test_gestures.py  test_screenshots.py  test_tap.py  test_text_input.py  test_upload_app.py
tests/fixtures/: __init__.py  bootstrap.py  mcp_client.py  platform.py  report.py  timing.py
tests/reports/: .gitkeep  timing_report.md
(+9 files in other folders)
