[project]
name = "flutter-control-mcp"
version = "0.1.0"
description = "MCP server for Flutter UI automation via Maestro and Flutter Driver"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "erace"}
]
keywords = ["flutter", "mcp", "automation", "testing", "maestro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "httpx>=0.24.0",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
flutter-control = "flutter_control.cli:main"
flutter-control-install = "flutter_control.cli:install_service"
flutter-control-uninstall = "flutter_control.cli:uninstall_service"
flutter-control-server = "flutter_control.cli:run_server"

[project.urls]
Homepage = "https://github.com/erace/flutter-control-mcp"
Repository = "https://github.com/erace/flutter-control-mcp"
Issues = "https://github.com/erace/flutter-control-mcp/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["flutter_control*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
